make importers compatible with java 1.8